--- a/Personal_Finance_Management_System/src/main/java/com/mycompany/personal_finance_management_system/Menu_Page.form
+++ b/Personal_Finance_Management_System/src/main/java/com/mycompany/personal_finance_management_system/Menu_Page.form
@@ -94,6 +94,9 @@
                 <Property name="horizontalTextPosition" type="int" value="0"/>
                 <Property name="verticalTextPosition" type="int" value="3"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
