--- a/Personal_Finance_Management_System/src/main/java/Budget_planner/AddBudget.form
+++ b/Personal_Finance_Management_System/src/main/java/Budget_planner/AddBudget.form
@@ -60,7 +60,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="431" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="541" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -415,7 +415,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="60" y="170" width="181" height="30"/>
+              <AbsoluteConstraints x="60" y="160" width="181" height="30"/>
             </Constraint>
           </Constraints>
         </Component>
